FlightPath 6.x Changelog
========================

2022-04-10
  Added more messages on login page for if login failed (admin user is only one allowed, students not allowed, etc).
  

2022-04-04
  Using font awesome question-circle icon for popup_description link instead of regular question mark.  Also used margin to add a little more spacing.
  

2022-04-02
  Adjusted weights to better alphabetize the admin console menu items.

  Added new silk icons to system module directory.

  Added ability to have "pseudo" opt-groups for checkboxes fields, where checkboxes can be grouped
  the same way select lists can, in a multi-dimensional array.
  

2022-03-31
  Added small bit of code to advise.module to stop notice/warning from happening.
  

2022-03-30
  Added extra classes to tabs and sub-tabs to make them targetable by CSS.
  
  Added extra classes to History tab sections to make them more targetable by CSS.
  
  Added extra class to section titles to include machine-readable versions of the title, for CSS.
  
  Similarly added to student files module to make CSS styling easier.
  

2022-03-29
  Fixed a subtle bug where if a course was being advised to take in a group that was split between two different semesters,
  it was possible that it would attempt to be saved into the first semester num of the group's first appearance.


2022-03-28
  Minor change in System.  When trimming watchdog table of DEBUG statements, made sure that "max age" was an int using intval().
  
  Fixed bug in core's course search edit submit, where it would never work.  Probably a result of my recent work.
  

2022-03-25
  Adjusted look of textareas in form elements to have similar rounded corners and such as text fields.


2022-03-22
  Added hook to course_search, so that other modules can modify the "course not scheduled" result.  See new file course_search.api.php.
  
  For the pager_query() functionality, look for value in $_REQUEST instead of just $_GET.
  

2022-03-21